--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "diagram markup prototype",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "build": "./node_modules/.bin/tsc -p src",
+    "test": "jest",
+    "prepack": "./node_modules/.bin/tsc -t ES2016 --module commonjs --declaration --outDir ./lib --allowSyntheticDefaultImports ./src/*.ts"
   },
   "repository": {
     "type": "git",
@@ -18,5 +20,18 @@
   "bugs": {
     "url": "https://github.com/ttrider/coldun/issues"
   },
-  "homepage": "https://github.com/ttrider/coldun#readme"
+  "homepage": "https://github.com/ttrider/coldun#readme",
+  "dependencies": {},
+  "devDependencies": {
+    "@types/node": "^12.12.4",
+    "@types/jest": "^24.0.23",
+    "@babel/core": "^7.7.4",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-typescript": "^7.7.2",
+    "jest": "^24.9.0",
+    "proxyquire": "^2.1.3",
+    "ts-jest": "^24.1.0",
+    "ts-node": "^8.4.1",
+    "typescript": "^3.6.4"
+  }
 }
